Home screen alignment fixed.

--- a/beldex-bridge/src/index.css
+++ b/beldex-bridge/src/index.css
@@ -87,8 +87,8 @@ Handle on hover ::-webkit-scrollbar-thumb:hover {
 
 .appName {
   color: #fff;
-  font-size: 2rem;
-  font-weight: 300;
+  font-size: 4rem;
+  font-weight: 400;
   margin-bottom: 0;
 }
 
@@ -144,7 +144,7 @@ Handle on hover ::-webkit-scrollbar-thumb:hover {
 
 .titleImage {
   object-fit: contain;
-  width: 230px;
+  width: 210px;
   max-width: 300px;
   opacity: 0;
   transition: opacity 0.3s ease-out;
@@ -168,7 +168,7 @@ Handle on hover ::-webkit-scrollbar-thumb:hover {
 
 .d-flex-center {
   width: 91%;
-  height: 100%;
+  height: 80%;
   display: flex;
   align-items: center;
 }
@@ -198,7 +198,7 @@ Handle on hover ::-webkit-scrollbar-thumb:hover {
   border: 1px solid #393954;
   background: #1f1f2e;
   padding: 20px 0;
-  margin-bottom: 20px;
+  margin-bottom: 13px;
 }
 
 .movedBal .bal-title {
